# Physx-2D

./: .gitignore  CMakeLists.txt  README.md  make_install.sh  physx2d.pc.in  setup.sh
src/core/: Application.cpp
src/math/: math.cpp
src/physics/: physics2d.cpp
src/renderer/: Buffer.cpp  framebuffer.cpp  instancedRenderer.cpp  renderer2D.cpp  shader.cpp  texture.cpp  vao.cpp
src/scene/: camera.cpp  entity.cpp  world.cpp
src/utils/: ComputeShader.cpp  defaults.cpp  quadtree.cpp  time.cpp  utils.cpp
src/window/: window.cpp
